--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
-body{
-    background-color: blueviolet;
+.statement{
+    background-color: aqua;
+    border: 2px solid black;
+    width: 50%;
 }
